--- a/styles/style.css
+++ b/styles/style.css
@@ -21,3 +21,103 @@ body {
     display: grid;
     place-content: center;
 }
+
+
+
+
+
+
+/* product Card  */
+
+.product {
+    position: relative;
+    background-color: var(--sectionBack);
+    width: 350px;
+    height: 100%;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, .3);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px 20px 40px;
+    border-radius: 10px;
+    transition: .3s;
+}
+
+.product:hover {
+    transform: translateY(-15px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+}
+
+/* product image  */
+
+.image {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    place-content: center;
+    margin-bottom: 5px;
+}
+
+.image img {
+    width: 240px;
+}
+
+
+.namePrice {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 5px;
+}
+
+.namePrice h3 {
+    font-size: 2em;
+    text-transform: capitalize;
+    color: var(--textColor);
+}
+
+.namePrice span {
+    font-size: 1.5em;
+    color: var(--starColor);
+}
+
+.product h2 {
+    font-size: 22px;
+    line-height: 25px;
+}
+
+
+/* icons  */
+
+.stars {
+    margin-top: 5px;
+}
+
+.stars i {
+    font-size: 1.3em;
+    color: var(--starColor);
+}
+
+
+/* button  */
+.button {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+}
+
+.button button {
+    padding: 10px 20px;
+    border-radius: 7px;
+    border: none;
+    background-color: var(--textColor);
+    color: var(--sectionBack);
+    font-size: 18px;
+    text-transform: capitalize;
+    cursor: pointer;
+    transition: .5s;
+}
+
+.button button:hover {
+    transform: scale(1.1);
+}
