--- a/styles/style.css
+++ b/styles/style.css
@@ -22,14 +22,62 @@ body {
     place-content: center;
 }
 
+header {
+    margin-top: 20px;
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+
+/* search box  */
+.input-group {
+    display: flex;
+}
+
+.input-group input {
+    height: 40px;
+    width: 500px;
+    padding: 6px 10px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border: 1px solid var(--textColor);
+    font-size: 18px;
+}
+
+.input-group input:focus,
+.input-group input:active {
+    outline: 0;
+}
+
+.input-group button {
+    width: 100px;
+    padding: 10px 20px;
+    border: none;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    background-color: var(--textColor);
+    color: var(--sectionBack);
+    font-size: 18px;
+    text-transform: capitalize;
+    cursor: pointer;
+    transition: .5s;
+}
+
+
+#phones-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 50px;
+}
 
 
 
 
 /* product Card  */
 
-.product {
+.product-card {
     position: relative;
     background-color: var(--sectionBack);
     width: 350px;
@@ -43,7 +91,7 @@ body {
     transition: .3s;
 }
 
-.product:hover {
+.product-card:hover {
     transform: translateY(-15px);
     box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
 }
@@ -81,7 +129,7 @@ body {
     color: var(--starColor);
 }
 
-.product h2 {
+.product-card h2 {
     font-size: 22px;
     line-height: 25px;
 }
