--- a/styles/style.css
+++ b/styles/style.css
@@ -216,6 +216,7 @@ header {
     padding: 20px 20px 40px;
     border-radius: 10px;
     transition: .3s;
+    overflow: hidden;
 }
 
 .product-card:hover {
@@ -231,6 +232,30 @@ header {
     display: grid;
     place-content: center;
     margin-bottom: 5px;
+    position: relative;
+}
+
+
+.phone-details-btn {
+    /* From https://css.glass */
+    background: rgba(255, 255, 255, 0.2);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    font-size: 20px;
+    width: 100%;
+    height: 50px;
+    font-weight: 500;
+    position: absolute;
+    left: -120%;
+    bottom: 0;
+    cursor: pointer;
+    transition: left 0.3s linear;
+}
+
+.product-card:hover .phone-details-btn {
+    left: 0;
 }
 
 .image img {
